--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/analytics": "^1.4.1",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
