--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ensemble-ai/sdk": "^0.2.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.64.1",
+    "axios": "^1.7.9",
     "ethers": "^6.13.5",
     "next": "15.1.3",
     "react": "^19.0.0",
