--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.9",
-    "@ensemble-ai/sdk": "^0.2.2",
+    "@ensemble-ai/sdk": "^0.2.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "ethers": "^6.13.5",
     "next": "15.1.3",
+    "pinata-web3": "^0.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "^2.22.9",
