--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.13.5",
     "next": "15.1.3",
     "pinata-web3": "^0.5.4",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "^2.22.9",
