--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@apollo/client": "^3.12.9",
     "@ensemble-ai/sdk": "^0.2.6",
+    "@radix-ui/react-switch": "^1.1.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "next": "15.1.3",
     "pinata-web3": "^0.5.4",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-variants": "^1.0.0",
     "viem": "^2.22.9",
     "wagmi": "^2.14.8"
   },
