--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.12.9",
     "@ensemble-ai/sdk": "^0.2.6",
     "@radix-ui/react-switch": "^1.1.3",
+    "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
