--- a/package.json
+++ b/package.json
@@ -9,31 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.12.9",
-    "@ensemble-ai/sdk": "^0.2.9",
+    "@apollo/client": "^3.12.11",
+    "@ensemble-ai/sdk": "^0.3.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query": "^5.66.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
-    "next": "15.1.3",
+    "next": "^15.2.4",
     "pinata-web3": "^0.5.4",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^1.0.0",
-    "viem": "^2.22.9",
-    "wagmi": "^2.14.8"
+    "viem": "^2.22.22",
+    "wagmi": "^2.14.10"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^20.17.17",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
