--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.9",
     "@ensemble-ai/sdk": "^0.2.9",
+    "@next/third-parties": "^15.2.4",
     "@radix-ui/react-switch": "^1.1.3",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/line-clamp": "^0.4.4",
