--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,7 +17,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.66.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@xmtp/browser-sdk": "^2.0.12",
+    "@xmtp/browser-sdk": "2.0.3",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
