--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@apollo/client": "^3.12.11",
+    "@assistant-ui/react": "^0.10.9",
+    "@assistant-ui/react-ai-sdk": "^0.10.9",
+    "@assistant-ui/react-markdown": "^0.10.3",
     "@ensemble-ai/sdk": "^0.3.2",
     "@next/third-parties": "^15.2.4",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@xmtp/browser-sdk": "2.0.3",
+    "ai": "^4.3.16",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
+    "lucide-react": "^0.511.0",
     "next": "^15.2.4",
     "pinata-web3": "^0.5.4",
     "pino-pretty": "^13.0.0",
@@ -33,6 +44,7 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^1.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.22.22",
     "wagmi": "^2.14.10"
   },
