--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@assistant-ui/react-ai-sdk": "^0.10.9",
     "@assistant-ui/react-markdown": "^0.10.3",
     "@ensemble-ai/sdk": "^0.3.2",
+    "@mantine/hooks": "^8.0.2",
     "@next/third-parties": "^15.2.4",
     "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,7 +26,15 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@xmtp/browser-sdk": "2.0.3",
+    "@xmtp/browser-sdk": "^2.0.3",
+    "@xmtp/content-type-group-updated": "^2.0.2",
+    "@xmtp/content-type-primitives": "^2.0.2",
+    "@xmtp/content-type-reaction": "^2.0.2",
+    "@xmtp/content-type-remote-attachment": "^2.0.2",
+    "@xmtp/content-type-reply": "^2.0.2",
+    "@xmtp/content-type-text": "^2.0.2",
+    "@xmtp/content-type-transaction-reference": "^2.0.2",
+    "@xmtp/content-type-wallet-send-calls": "^1.0.1",
     "ai": "^4.3.16",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +54,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uint8array-extras": "^1.4.0",
     "viem": "^2.22.22",
     "wagmi": "^2.14.10"
   },
