--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@assistant-ui/react": "^0.10.24",
     "@assistant-ui/react-ai-sdk": "^0.10.14",
     "@assistant-ui/react-markdown": "^0.10.5",
+    "@elizaos/core": "1.0.0-beta.32",
     "@ensemble-ai/sdk": "^0.4.0",
     "@mantine/hooks": "^8.1.2",
     "@next/third-parties": "^15.3.5",
@@ -41,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.15.0",
+    "evt": "^2.5.9",
     "lucide-react": "^0.511.0",
     "next": "^15.3.5",
     "pinata-web3": "^0.5.4",
@@ -52,6 +54,7 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
