Support Eliza v1 socket and channels

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@assistant-ui/react": "^0.10.24",
     "@assistant-ui/react-ai-sdk": "^0.10.14",
     "@assistant-ui/react-markdown": "^0.10.5",
-    "@elizaos/core": "1.0.0-beta.32",
+    "@elizaos/core": "latest",
     "@ensemble-ai/sdk": "^0.4.2",
     "@mantine/hooks": "^8.1.2",
     "@next/third-parties": "^15.3.5",
@@ -42,6 +42,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "core:latest": "link:@elizaos/core:latest",
     "ethers": "^6.15.0",
     "evt": "^2.5.9",
     "install": "^0.13.0",
