--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "evt": "^2.5.9",
     "install": "^0.13.0",
     "lucide-react": "^0.511.0",
-    "next": "^15.3.5",
+    "next": "15.3.6",
     "npm": "^11.4.2",
     "pinata-web3": "^0.5.4",
     "pino-pretty": "^13.0.0",
